Fixed X on alert button
The button was way too high on the alert box

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,6 @@ img {
   fontColor: grey;
 }
 
-.top {
-  display: flex;
-  flex-direction: column;
-}
 
 .dashAll {
   display: flex;
@@ -49,8 +45,8 @@ img {
 }
 
 .switch-toggle.switch-ios {
-  display: flex;
-  width: 40%;
+margin-left: 70%;
+  width: 30%;
   height: 35px;
 
 }
@@ -77,7 +73,7 @@ img {
 }
 
 .primary-container {
-  display: flex;
+  display: block;
   flex-direction: row;
   padding-left: 20px;
 }
@@ -87,10 +83,11 @@ img {
   color: white;
   font-weight: bold;
   float: right;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 20px;
   cursor: pointer;
   transition: 0.3s;
+  padding-bottom: 5px;
 }
 
 .closebtn:hover {
@@ -454,7 +451,7 @@ justify-content:space-between;
 }
 span {
 margin-right: 50px;
-margin-top: 10px;
+
 }
 
 input.src-user {
@@ -556,6 +553,8 @@ border-right-color: grey;
 /* CALC STYLES */
 
 @media  (min-width: 768px) {
+
+
   .members-container {
     border-right: 1px solid lightgrey;
   }
